support for datacenter #44, initial tests, update plugin version and bitbucket version

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@
 # Mongo Explorer plugin:
 # .idea/mongoSettings.xml
 
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
 ## File-based project format:
 *.ipr
 *.iws
