--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <bitbucket.version>4.9.1</bitbucket.version>
+        <bitbucket.version>4.13.0</bitbucket.version>
         <bitbucket.data.version>${bitbucket.version}</bitbucket.data.version>
         <atlassian-sal-api.version>3.0.5</atlassian-sal-api.version>
         <amps.version>6.1.0</amps.version>
@@ -34,22 +34,22 @@
     </dependencyManagement>
     <dependencies>
 
-  	<dependency>
+        <dependency>
             <groupId>com.atlassian.bitbucket.server</groupId>
             <artifactId>bitbucket-api</artifactId>
             <scope>provided</scope>
         </dependency>
- 	<dependency>
+        <dependency>
             <groupId>com.atlassian.bitbucket.server</groupId>
             <artifactId>bitbucket-spi</artifactId>
             <scope>provided</scope>
         </dependency>
-    	<dependency>
+        <dependency>
             <groupId>com.atlassian.bitbucket.server</groupId>
             <artifactId>bitbucket-git-api</artifactId>
             <scope>provided</scope>
         </dependency>
- 	<dependency>
+        <dependency>
             <groupId>com.atlassian.sal</groupId>
             <artifactId>sal-api</artifactId>
             <version>${atlassian-sal-api.version}</version>
@@ -116,11 +116,16 @@
             <version>1.4.0</version>
         </dependency>
         <dependency>
-         <groupId>xalan</groupId>
-         <artifactId>xalan</artifactId>
-         <version>2.7.1</version>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -139,6 +144,8 @@
                             <dataVersion>${bitbucket.data.version}</dataVersion>
                         </product>
                     </products>
+                    <enableQuickReload>true</enableQuickReload>
+                    <enableFastdev>false</enableFastdev>
                 </configuration>
             </plugin>
             <plugin>
@@ -152,8 +159,7 @@
         </plugins>
     </build>
 
-
-  <repositories>
+    <repositories>
         <repository>
             <id>atlassian-public</id>
             <url>https://maven.atlassian.com/content/groups/public</url>
@@ -174,6 +180,5 @@
             </releases>
         </pluginRepository>
     </pluginRepositories>
-
 
 </project>
