Changed atlassian's maven repository URLs in pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
     <repositories>
         <repository>
             <id>atlassian-public</id>
-            <url>https://maven.atlassian.com/content/groups/public</url>
+            <url>https://maven.atlassian.com/repository/public</url>
             <releases>
                 <enabled>true</enabled>
                 <checksumPolicy>warn</checksumPolicy>
@@ -268,7 +268,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>atlassian-public</id>
-            <url>https://maven.atlassian.com/content/groups/public</url>
+            <url>https://maven.atlassian.com/repository/public</url>
             <releases>
                 <enabled>true</enabled>
                 <checksumPolicy>warn</checksumPolicy>
